--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
         "twig/twig": "^3.0",
-        "vlucas/phpdotenv": "^5.2"
+        "vlucas/phpdotenv": "^5.2",
+        "doctrine/migrations": "^3.1"
     },
     "autoload": {
         "psr-4": {
